<resources>
    <string name="app_name">ASIKA -  Asisten Individu Karyawan</string>
    <string name="txt_asika">Asisten Individu Karyawan</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="input_email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="txt_register">Belum memiliki akun?</string>
    <string name="sign_up_now">Register</string>
    <string name="btn_reset">Reset</string>
    <string name="tv_forgot_pass_info">Kami akan mengirimkan 4 digit kode OTP ke email anda</string>
    <string name="tv_forgot_pass">Lupa Password</string>
    <string name="tv_verification">Verification OTP</string>
    <string name="tv_email">sample@gmail.com</string>
    <string name="tv_verification_info">Kami telah mengirim 4 digit kode OTP ke</string>
    <string name="tv_edit">Edit</string>
    <string name="tv_otp_info">Menunggu OTP … 00:00</string>
    <string name="tv_resend_otp">Resend OTP</string>
    <string name="btn_reset_pass">Reset Password</string>
    <string name="tv_new_pass">Password Baru</string>
    <string name="tv_new_pass_info">Masukan password baru anda</string>
    <string name="btn_save_pass">Save Password</string>
    <string name="input_new_password">Password Baru</string>
    <string name="tv_signup">Sign Up</string>
    <string name="input_name">Nama</string>
    <string name="input_phone">Nomor Telepon</string>
    <string name="input_address"><![CDATA[Alamat & Kota]]></string>
    <string name="btn_signup">Sign Up</string>
    <string name="tv_verification_email">Verifikasi Email</string>
    <string name="tv_verification_info2">Kami akan mengirim link untuk verifikasi ke email sample@gmail.com</string>
    <string name="btn_next">Lanjutkan</string>
    <string name="btn_verification">Verifikasi</string>
    <string name="checklist">Dengan membuat akun, saya setuju dengan syarat, Ketentuan dan Kebijakan Privasi</string>
    <string name="tv_email_info">Kami telah mengirim link ke email:</string>
    <string name="sample_email">sample@gmail.com</string>
    <string name="tv_resend_link">Kirim Ulang Link</string>
    <string name="tv_timer">00:00</string>
    <string name="tv_wait_verification">Menunggu verifikasi</string>
    <string name="btn_scan">Scan QR Code</string>
    <string name="btn_history">Riwayat Scan</string>
    <string name="btn_news">News</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_finish">Selesai</string>
    <string name="tv_thank">Terima Kasih</string>
    <string name="tv_absen">Absen</string>
    <string name="sample_datetime">Senin 24 Agustus12:53 – 20/8/2020</string>
    <string name="sample_location">Cianjur</string>
    <string name="tv_show">Tampilkan lebih banyak</string>
    <string name="tv_history">Riwayat Absen</string>
    <string name="tv_sample_time">13:28</string>
    <string name="tv_semple_absen">Absen</string>
    <string name="profile">Profile</string>
    <string name="news">Berita Baru</string>
    <string name="todo_list">To do List</string>
    <string name="home">Beranda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="none_data">............</string>
    <string name="tv_position">Staff IT di PT. Himed Indonesia</string>
    <string name="tv_schedule">Jadwal Masuk</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="reimbursement">Reimbursement</string>
    <string name="history">Riwayat Absen</string>
    <string name="report">Laporan Gaji</string>
    <string name="permission">Pengajuan Cuti &amp; Izin</string>
    <string name="zero">0</string>
    <string name="tv_permission">x izin kerja</string>
    <string name="tv_late">menit telat</string>
    <string name="tv_work">x masuk kerja</string>
    <string name="tv_no_todo_list">Tidak ada tugas</string>
    <string name="tv_no_news">Tidak ada berita</string>
    <string name="fab_add_photo">Add Photo</string>
    <string name="request_data">.............</string>
    <string name="tv_todo_list">Daftar Tugas</string>
    <string name="tv_news">Daftar Berita</string>
    <string name="tv_profile">Profile</string>
    <string name="email_password_null">Email tidak boleh kosong</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="error_user_not_found">Pengguna tidak terdaftar</string>
    <string name="error_wrong_password">Password yang dimasukan salah</string>
    <string name="send_reset_password">Silakan cek inbox pada email anda</string>
    <string name="re_type_password">Ketik Ulang Kata Sandi</string>
    <string name="password_not_valid">Password yang dimasukan tidak sama</string>
    <string name="warning_input_data">Tidak boleh ada data yang kosong</string>
    <string name="request_problem">Terjadi kesalahan, silakan coba lagi</string>
    <string name="btn_edit">Edit Profile</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="btn_edit_profile">Edit</string>
    <string name="success_edit_profile">Profil berhasil diubah</string>
    <string name="tv_absent">Berhasil Absensi</string>
    <string name="tv_office">di Kantor Pusat</string>
    <string name="tv_no_absent">Belum ada riwayat absen</string>
    <string name="tv_qrcode_txt">Arahkan kamera ke QR Code</string>
    <string name="tv_notification">Riwayat Notifikasi</string>
    <string name="tv_no_notification">Belum ada notifikasi</string>
    <string name="tv_no_schedule">Belum ada jadwal masuk</string>
    <string name="come_to_work">Masuk Kerja</string>
    <string name="off_work">Libur</string>
    <string name="tv_report">Laporan Gaji</string>
    <string name="tv_no_report">Belum ada laporan gaji</string>
</resources>